<resources>
    <string name="app_name">Grih Darshan</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_logOut">Logout</string>
    <string name="menu_Profile">Profile</string>
    <string name="menu_sync">Synchronize</string>
    <string name="menu_change_password">Change Password</string>
    <string name="menu_incentive_report">View Uploaded Data </string>
    <string name="court_type_name">Court Type: [*] </string>
    <string name="court_sub_type_name">Court Sub Type: [*] </string>
    <string name="home_second">Home Second</string>
    <string name="authenticating">सत्यापन हो रहा है ...</string>
    <string name="failed">फेल !</string>
    <string name="authentication_failed">सत्यापन फेल हो गया !</string>
    <string name="server_down_title">इंटरनेट/सर्वर डाउन  !</string>
    <string name="server_down_text">अभी इंटरनेट कनेक्शन नहीं है/सर्वर रखरखाव मे है  !</string>
    <string name="username_password_notmatched">यूजर का नाम या पासवर्ड सही नहीं है !</string>
    <string name="enable_internet_for_firsttime">कृप्या पहली बार के लिए इंटरनेट कनेक्शन ऑन करें !</string>
    <string name="police_reg">Thana Registration</string>
    <string name="outpost_reg">Add Outpost</string>
    <string name="major_public_utilities">Major Public Utilities Places</string>
    <string name="important_contact">Important Contact</string>
    <string name="range">Range Name :</string>
    <string name="departmentType">Department Type : [*]</string>
    <string name="range_dis">Range</string>
    <string name="district">Thana District :</string>
    <string name="district_dis">District</string>
    <string name="subdiv">Sub Division :</string>
    <string name="subdiv_dis">Sub Division</string>
    <string name="police_station">Thana Name :</string>
    <string name="police_station_dis">Thana Name</string>
    <string name="outpost_station">Outpost Name : [*]</string>
    <string name="postoffice_name">Post Office Name : [*]</string>
    <string name="officier_name">Officer Name : [*]</string>
    <string name="sho_name">SHO Name : [*]</string>
    <string name="sho_name_dis">SHO Name</string>
    <string name="outpost_inc_name">Outpost Incharge Name : [*]</string>
    <string name="address">Thana Address : [*]</string>
    <string name="outpost_address">Outpost Address : [*]</string>
    <string name="mobile_num">SHO Mobile Number : [*]</string>
    <string name="mobile_num_dis">Mobile Number</string>
    <string name="office_mobile_num_dis">Please Enter Office - in - Charge Mobile Number</string>
    <string name="outpost_mobile_num">Outpost Incharge Mobile Number : [*]</string>
    <string name="landline">Landline Number :</string>
    <string name="notification_avail">Thana Notification Availability : [*]</string>
    <string name="select_notification_avail">Please Select Thana Notification Availability : [*]</string>
    <string name="select_outpost_notification_avail">Please Select OutPost Notification Availability : [*]</string>
    <string name="outpost_notification_avail">Outpost Notification Availability :</string>
    <string name="major_public_utilities_type">Major Public Utilities Type : [*]</string>
    <string name="major_public_fire_type">Fire Type : [*]</string>
    <string name="major_type_fire_hydrant">Type of Hydrant : [*]</string>
    <string name="fire_status">Status : [*]</string>
    <string name="contact_type">Contact Type : [*]</string>
    <string name="notification_num">Notification Number :</string>
    <string name="notification_date">Notification Date :</string>
    <string name="land_avail">Thana Land Availability : [*]</string>
    <string name="khata_avail">Is Khata Khesra Available : [*]</string>
    <string name="outpost_land_avail">Outpost Land Availability : [*]</string>
    <string name="khata_num">Khata Number : [*]</string>
    <string name="state_office_Name">State Level Office Name : [*]</string>
    <string name="dist_office_Name">District Level Office Name : [*]</string>
    <string name="khesra_num">Khesra Number : [*]</string>
    <string name="password_en">Password: [*]</string>
    <string name="confirm_password_en">Confirm Password: [*]</string>
    <string name="enter_here">Enter Here..</string>
    <string name="preview_befor_registration">Preview Before Registration</string>
    <string name="btn_submit">Submit</string>
    <string name="save">Save</string>
    <string name="getotp">Get Otp</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="add_outpost">Add OutPost</string>
    <string name="add_contact">Add Important Contact</string>
    <string name="upload_contact">Upload Important Contact</string>
    <string name="major_utilities">Add Major Public Utilities Places</string>
    <string name="edit_major_utilities">Upload Major Public Utilities Places</string>
    <string name="add_offices">Offices</string>
    <string name="edit_offices">Upload Offices</string>
    <string name="postoffice_address">Post Office Address : [*]</string>
    <string name="postoffice_contact">Post Office Contact Number : [*]</string>
    <string name="officer_contact">Officer Contact Number : [*]</string>
    <string name="officer_email">E-Mail Id : </string>
    <string name="officer_email_dis">E-Mail Id</string>
    <string name="type_of_hosp">Type Of Hospital : [*]</string>
    <string name="hospital_name">Hospital / PHCs name : [*]</string>
    <string name="capacity_of_bed">Capacity of beds : [*]</string>
    <string name="hospital_contact_num">Hospital / PHCs Contact Number : [*]</string>
    <string name="hospital_address">Hospital / PHCs Address : [*]</string>
    <string name="type_of_school">Type Of School : [*]</string>
    <string name="type_of_busstand">Type Of Bus Stand : [*]</string>
    <string name="school_name">School name : [*]</string>
    <string name="school_address">School Address : [*]</string>
    <string name="school_contact_num">School Contact Number : [*]</string>
    <string name="airport_name">Airport name : [*]</string>
    <string name="airport_address">Airport Address : [*]</string>
    <string name="busstand_name">Bus Stand name : [*]</string>
    <string name="busstand_address">Bus Stand Address : [*]</string>
    <string name="historical_name_to_visit">Historical Place Name  : [*]</string>
    <string name="txt_hydrant_name">Hydrant Name  : [*]</string>
    <string name="txt_fire_prone_location">Fire Prone Name  : [*]</string>
    <string name="historical_name_to_visit_address">Historical Place Address  : [*]</string>
    <string name="major_fair_festival_procession_route">Major Fairs / Festivals / Procession Routes Name  : [*]</string>
    <string name="major_fair_festival_procession_route_address">Please Enter Address  : [*]</string>
    <string name="fire_address">Please Enter Address  : [*]</string>
    <string name="major_crime_head">Major Crime Head : [*]</string>
    <string name="major_crime_head_address">Major Crime Head Address : [*]</string>
    <string name="chronic_land_disputs">Chronic Land Disputs Place : [*]</string>
    <string name="land_dispute_address">Chronic Land Disputs Address : [*]</string>
    <string name="religion_place">Religion place Name : [*]</string>
    <string name="religion_type">Religion Place Type : [*]</string>
    <string name="kabristan_village">Name of Village : [*]</string>
    <string name="kabristan_land_avail">Land Detail : [*]</string>
    <string name="kabristan_land_details">Please Select Land Detail : [*]</string>
    <string name="boundary_wall_status">Boundary Wall Status : [*]</string>
    <string name="jail_name">Jail Name : [*]</string>
    <string name="historical_importance">Historical importance of Prison : [*]</string>
    <string name="jail_address">Jail Address : [*]</string>
    <string name="best_practices">Best Practices : [*]</string>
    <string name="reforms_correctional_activities">Reforms/Correctional activities : [*]</string>
    <string name="establish_year">Established / Started Year : [*]</string>
    <string name="jail_type">Jail Type : [*]</string>
    <string name="jail_capacity">No. of Capacity : [*]</string>
    <string name="no_of_inmates">No. of Inmates : [*]</string>
    <string name="transit">Transit : [*]</string>
    <string name="inmates_under_18">Inmates Under 18 : [*]</string>
    <string name="inmates_over_18">Inmates Over 18 : [*]</string>
    <string name="inmates_foreigner">Inmates Foreigner : [*]</string>
    <string name="available_amenities">Available Amenities : [*]</string>
    <string name="court_type">Type of Court : [*]</string>
    <string name="other_facility">Other Facility : [*]</string>
    <string name="name_court">Name of Court : [*]</string>
    <string name="court_address">Court Address : [*]</string>
    <string name="division_fun">Divisions Functioning(Types of Lab) : [*] </string>
    <string name="major_devices_equi">Major Devices and Equipments Available(with Quality) : [*] </string>
    <string name="remarks">Remarks : </string>
    <string name="something_went_wrong">Something went wrong !</string>
    <string name="invalid_otp">Invalid OTP</string>
    <string name="verified_otp">OTP Verified Sucessfully</string>
    <string name="required_field">Required Fields</string>
    <string name="hosp_required_field">Please Enter Hospital / Phc Name</string>
    <string name="jail_required_field">Please Enter Jail Name</string>
    <string name="valid_historical_importance">Please Enter Historical importance of Prison</string>
    <string name="valid_best_practices">Please Enter Best Practices</string>
    <string name="valid_reforms_correctional">Please Enter Reforms/Correctional activities</string>
    <string name="male_capacity">Please Enter Male Capacity</string>
    <string name="female_capacity">Please Enter Female Capacity</string>
    <string name="other_capacity">Please Enter Other Capacity</string>
    <string name="under_trail_male">Please Enter Under Trail Male</string>
    <string name="under_trail_female">Please Enter Under Trail Female</string>
    <string name="under_trail_other">Please Enter Under Trail Other</string>
    <string name="convicted_male">Please Enter Convicted Male</string>
    <string name="convicted_female">Please Enter Convicted Female</string>
    <string name="convicted_other">Please Enter Convicted Other</string>
    <string name="transit_male">Please Enter Transit Male</string>
    <string name="transit_female">Please Enter Transit Female</string>
    <string name="transit_other">Please Enter Transit Other</string>
    <string name="male_under_eighteen">Please Enter Male Under 18</string>
    <string name="female_under_eighteen">Please Enter Female Under 18</string>
    <string name="other_under_eighteen">Please Enter Other Under 18</string>
    <string name="male_over_eighteen">Please Enter Male Over 18</string>
    <string name="female_over_eighteen">Please Enter Female Over 18</string>
    <string name="other_over_eighteen">Please Enter Other Over 18</string>
    <string name="male_foreigner">Please Enter Male Foreigner</string>
    <string name="female_foreigner">Please Enter Female Foreigner</string>
    <string name="registration_success">Registration Successful !</string>
    <string name="ok_en">OK</string>
    <string name="userid">User ID </string>
    <string name="password_enn">Password: </string>
</resources>