<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="bottom"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_white"
        android:orientation="vertical">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">
            <include
                android:id="@+id/header"
                layout="@layout/header_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true" />

        </FrameLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20dp"
            android:textStyle="bold"
            android:fontFamily="sans-serif-light"
            android:textColor="@color/color_green"
            android:layout_margin="20dp"
            android:text="@string/registration_success"/>

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:src="@drawable/applied"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp"
                android:textSize="14sp"
                android:textStyle="bold"
                android:maxLines="1"
                android:fontFamily="monospace"
                android:text="@string/range_dis"/>
            <TextView
                android:id="@+id/tv_range"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:padding="5dp"
                android:textSize="14sp"
                android:maxLines="1"
                android:fontFamily="monospace"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp"
                android:textSize="14sp"
                android:textStyle="bold"
                android:maxLines="1"
                android:fontFamily="monospace"
                android:text="@string/district_dis"/>
            <TextView
                android:id="@+id/tv_disttrict"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:padding="5dp"
                android:textSize="14sp"
                android:maxLines="1"
                android:fontFamily="monospace"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:padding="5dp"
                android:textSize="14sp"
                android:textStyle="bold"
                android:maxLines="1"
                android:fontFamily="monospace"
                android:text="@string/subdiv_dis"/>
            <TextView
                android:id="@+id/tv_sub"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp"
                android:textSize="12sp"
                android:maxLines="2"
                android:fontFamily="monospace"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp"
                android:textSize="14sp"
                android:textStyle="bold"
                android:maxLines="1"
                android:fontFamily="monospace"
                android:text="@string/police_station_dis"/>
            <TextView
                android:id="@+id/tv_psname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:padding="5dp"
                android:textSize="14sp"
                android:maxLines="1"
                android:fontFamily="monospace"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp"
                android:textSize="14sp"
                android:textStyle="bold"
                android:maxLines="1"
                android:fontFamily="monospace"
                android:text="@string/sho_name_dis"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:padding="5dp"
                android:textSize="14sp"
                android:maxLines="1"
                android:fontFamily="monospace"
                android:id="@+id/tv_shoname"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp"
                android:textSize="14sp"
                android:textStyle="bold"
                android:maxLines="1"
                android:fontFamily="monospace"
                android:text="@string/mobile_num_dis"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:padding="5dp"
                android:textSize="14sp"
                android:maxLines="1"
                android:fontFamily="monospace"
                android:id="@+id/tv_mobile"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp"
                android:textSize="14sp"
                android:textStyle="bold"
                android:maxLines="1"
                android:fontFamily="monospace"
                android:text="@string/officer_email_dis"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:padding="5dp"
                android:textSize="14sp"
                android:maxLines="1"
                android:fontFamily="monospace"
                android:id="@+id/tv_email"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp"
                android:textSize="14sp"
                android:textStyle="bold"
                android:maxLines="1"
                android:fontFamily="monospace"
                android:text="@string/userid"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:padding="5dp"
                android:textSize="14sp"
                android:maxLines="1"
                android:fontFamily="monospace"
                android:id="@+id/userid"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp"
                android:textSize="14sp"
                android:textStyle="bold"
                android:maxLines="1"
                android:fontFamily="monospace"
                android:text="@string/password_enn"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:padding="5dp"
                android:textSize="14sp"
                android:maxLines="1"
                android:fontFamily="monospace"
                android:id="@+id/password"/>
        </LinearLayout>

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:textStyle="bold"
            android:textSize="14sp"
            android:textColor="@color/color_white"
            android:background="@drawable/button_login"
            android:layout_gravity="center"
            android:text="@string/ok_en"/>
    </LinearLayout>

</androidx.cardview.widget.CardView>
